# ArcAPI-Rust

./: .example.env  .gitignore  Cargo.toml  arcapi.example.toml
assets/: .default.env
migrations/2024-06-28-193540_init/: down.sql  up.sql
migrations/2024-07-04-141629_add_token_delete_cascade/: down.sql  up.sql
migrations/2024-07-09-100708_init/: up.sql
migrations/2024-07-09-101118_new/: down.sql  up.sql
src/: config.rs  env.rs  main.rs
src/db/: functions.rs  mod.rs  schema.rs  tokens.rs  users.rs
src/db/models/: messages.rs  mod.rs  tokens.rs  users.rs
src/filesystem/: mod.rs  user_scope.rs
src/middleware/: auth.rs  mod.rs
src/routers/: mod.rs
src/routers/extractors/: mod.rs  session_token.rs  session_user.rs
src/routers/v1/: filesystem.rs  messages.rs  meta.rs  mod.rs  schema.rs  session.rs  user.rs  users.rs  utils.rs
src/routers/v1/schema/: data_response.rs  filesystem.rs  message.rs  meta_info.rs  mod.rs  partial_user.rs  session.rs  user.rs
src/routers/v2/: meta.rs  mod.rs  token.rs  users.rs
src/routers/v2/schema/: meta_info.rs  mod.rs  session.rs  user.rs
