[package]
name = "arcos-api-rerewritten"
version = "0.0.1"
edition = "2021"

[dependencies]
diesel = { version = "2.2.1", features = ["sqlite", "serde_json", "r2d2", "chrono"] }
diesel_migrations = "2.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
toml = "0.8.14"
dotenvy = "0.15.7"
r2d2 = "0.8.10"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
