[package]
name = "arcos-api-rerewritten"
version = "0.0.1"
edition = "2021"

[dependencies]
diesel = { version = "2.2.1", features = ["sqlite", "serde_json", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
toml = "0.8.14"
dotenvy = "0.15.7"
r2d2 = "0.8.10"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum_typed_multipart = "0.11.1"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["normalize-path", "cors", "trace", "catch-panic"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
hmac-sha512 = "1.1.5"
uuid = { version = "1.9.1", features = ["v4"] }
base64 = "0.22.1"

[profile.release]
lto = "thin"
strip = "debuginfo"
